; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/ia64/kvm/extr_mmio.c_lsapic_read.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/ia64/kvm/extr_mmio.c_lsapic_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm_vcpu = type { i32 }

@PIB_SIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"Undefined read on PIB INTA\0A\00", align 1
@.str.1 = private unnamed_addr constant [27 x i8] c"Undefined read on PIB XTP\0A\00", align 1
@.str.2 = private unnamed_addr constant [35 x i8] c"Undefined addr access for lsapic!\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @lsapic_read(%struct.kvm_vcpu* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct.kvm_vcpu*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store %struct.kvm_vcpu* %0, %struct.kvm_vcpu** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  store i64 0, i64* %7, align 8
  %8 = load i32, i32* @PIB_SIZE, align 4
  %9 = sub nsw i32 %8, 1
  %10 = sext i32 %9 to i64
  %11 = load i64, i64* %5, align 8
  %12 = and i64 %11, %10
  store i64 %12, i64* %5, align 8
  %13 = load i64, i64* %5, align 8
  switch i64 %13, label %32 [
    i64 129, label %14
    i64 128, label %22
  ]

14:                                               ; preds = %3
  %15 = load i64, i64* %6, align 8
  %16 = icmp eq i64 %15, 1
  br i1 %16, label %17, label %18

17:                                               ; preds = %14
  br label %21

18:                                               ; preds = %14
  %19 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %4, align 8
  %20 = call i32 @panic_vm(%struct.kvm_vcpu* %19, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  br label %21

21:                                               ; preds = %18, %17
  br label %35

22:                                               ; preds = %3
  %23 = load i64, i64* %6, align 8
  %24 = icmp eq i64 %23, 1
  br i1 %24, label %25, label %28

25:                                               ; preds = %22
  %26 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %4, align 8
  %27 = call i64 @VLSAPIC_XTP(%struct.kvm_vcpu* %26)
  store i64 %27, i64* %7, align 8
  br label %31

28:                                               ; preds = %22
  %29 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %4, align 8
  %30 = call i32 @panic_vm(%struct.kvm_vcpu* %29, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0))
  br label %31

31:                                               ; preds = %28, %25
  br label %35

32:                                               ; preds = %3
  %33 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %4, align 8
  %34 = call i32 @panic_vm(%struct.kvm_vcpu* %33, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.2, i64 0, i64 0))
  br label %35

35:                                               ; preds = %32, %31, %21
  %36 = load i64, i64* %7, align 8
  ret i64 %36
}

declare dso_local i32 @panic_vm(%struct.kvm_vcpu*, i8*) #1

declare dso_local i64 @VLSAPIC_XTP(%struct.kvm_vcpu*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
